fixed div spacing in slide out on mobile view

--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -49,7 +49,7 @@ ul,
 }
 
 .coin-image {
-  padding-top: 15px;
+  padding-top: 15px;  
 }
 
 .coin-name-label,
@@ -57,7 +57,7 @@ ul,
 .coin-high-low-label {
   font-size: 14px;
   color: #a2a2a2;
-  padding-top: 2px;
+  padding-top: 2px;  
 }
 
 .sparkline {
@@ -98,6 +98,7 @@ svg {
   .sparkline-data,
   .sparkline-data-label {
     font-size: 13px;
+    margin-right: 5%;
   }  
 }
 
